Fixes overflow-x on mobile

--- a/public/styles/lava.css
+++ b/public/styles/lava.css
@@ -1,4 +1,5 @@
 body {
   background-color: #000;
-  overflow: hidden;
+  overflow-x: hidden;
+  -webkit-overflow-scrolling: hidden;
 }
